# message_queue_atika

./: readme.md
docs/: analysis_notification_architecture.md  running_testing_documentation.docx
message_queue_explore/: .gitignore  README.md  pyproject.toml
message_queue_explore/consumer/: app.py  config.py  entity.py  notification.py  repository.py  usecase.py
message_queue_explore/consumer/tests/: test_consumer_usecase.py
message_queue_explore/publisher/: app.py  config.py  entity.py  repository.py  usecase.py
message_queue_explore/publisher/tests/: test_publisher_usecase.py
