[project]
name = "message_queue_explore"
version = "0.1.0"
description = "RabbitMQ Publisher/Consumer sample ported to Python with clean architecture"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.24.0",
    "pika>=1.3.2,<1.4.0",
    "pydantic>=2.0",
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["publisher", "consumer"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["message_queue_explore"]
